collection list section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <h2 class="h1">Start your Journey as Influencer</h2>
             <p class="p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
             <div class="button">
-              <a href="#" class="btn">Preebook Now</a>
+              <a href="#" class="btn rounded">Preebook Now<i class="fas fa-arrow-right"></i></a>
             </div>
           </div>
         </div>
@@ -95,6 +95,180 @@
       <div class="brand-logo-items">
         <div class="brand-logo-item"><img src="logos/logo-7.svg" alt="" class="main-brand-logo"></div>
       </div>
+    </div>
+  </div>
+</section>
+<section class="feature-product-list">
+  <div class="container-big">
+    <div class="feature-product-heading">
+      <h1 class="h2">Popular Collection</h1>
+    </div>
+    <div class="d-grid grid-colume-3 justify-items-center-align-items-center feature-product-list-inner grid-colume-gap grid-row-gap">
+      <div class="feature-product-items">
+        <div class="feature-product-box">
+          <div class="feature-product-content">
+            <img src="images/product-img-1.png" alt="" class="product-image">
+            <h4 class="h4">Flex Tripod</h4>
+            <h5 class="h6">$50.48</h5>
+            <div class="review-star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>5</span>
+            </div>
+            <p class="p">CRISPER PHOTOS, SMOOTHER VIDEOS. Capture crisper photos, smoother videos, and optimal media consumption when using the Gorilla Pod SLR Zoom Tripod with Ballhead Bundle. This lightweight, professional tripod and ballhead bundle is designed for use with your SLR or mirrorless cameras up to 6.6 lbs. (3kg.). With this tripod and ballhead bundle you can stabilize your images, for a clearer click</p>
+          </div>
+        </div>
+      </div>
+      <div class="feature-product-items">
+        <div class="feature-product-box">
+          <div class="feature-product-content">
+            <img src="images/product-img-2.png" alt="" class="product-image">
+            <h4 class="h4">Microphone</h4>
+            <h5 class="h6">$120.25</h5>
+            <div class="review-star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>5</span>
+            </div>
+            <p class="p">The latest price of Takstar W-10 Microphone Windscreen in Bangladesh is 290৳. You can buy the Takstar W-10 Microphone Windscreen at best price from our website or visit any of our showrooms.</p>
+          </div>
+        </div>
+      </div>
+      <div class="feature-product-items">
+        <div class="feature-product-box">
+          <div class="feature-product-content">
+            <img src="images/product-img-3.png" alt="" class="product-image">
+            <h4 class="h4">Airbuds</h4>
+            <h5 class="h6">$100.00</h5>
+            <div class="review-star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>5</span>
+            </div>
+            <p class="p">The AirPods Pro are the only in‑ear headphones which is comes with Active Noise Cancellation that continuously adapts to the geometry of ear and the fit of the ear tips blocking out the world so that you can focus on what you’re listening to</p>
+          </div>
+        </div>
+      </div>
+      <div class="feature-product-items">
+        <div class="feature-product-box">
+          <div class="feature-product-content">
+            <img src="images/product-img-4.png" alt="" class="product-image">
+            <h4 class="h4">Drone</h4>
+            <h5 class="h6">$980.25</h5>
+            <div class="review-star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>5</span>
+            </div>
+            <p class="p">When Mini 2 is close to your smartphone, the DJI Fly app will automatically recognize and connect to the aircraft and synchronize selected photos and videos at 20 MB/s. With this new feature, you can easily cut out a segment of your footage to edit and download. Hunting for your favorite shot or worrying about insufficient storage is a thing of the past. The intuitive editor of the DJI Fly app includes a diverse set of creative templates. Flying, shooting, editing, and sharing can be done almost instantly, allowing you to create and share on the go.</p>
+          </div>
+        </div>
+      </div>
+      <div class="feature-product-items">
+        <div class="feature-product-box">
+          <div class="feature-product-content">
+            <img src="images/product-img-5.png" alt="" class="product-image">
+            <h4 class="h4">Light Setup</h4>
+            <h5 class="h6">$1200.00</h5>
+            <div class="review-star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>5</span>
+            </div>
+            <p class="p">Yongnuo YN300 III is equipped with 8 channel grouping function and battery capacity testing function. It supports remote controlling with remote controller, wireless controlling with mobile phone ( supports Android 4 3 and bluetooth 4 0 version and above IOS7 0 and iPhone4S and above mobile phone ) and group controlling the luminous intensity of Yongnuo YN300 III etc.</p>
+          </div>
+        </div>
+      </div>
+      <div class="feature-product-items">
+        <div class="feature-product-box">
+          <div class="feature-product-content">
+            <img src="images/product-img-6.png" alt="" class="product-image">
+            <h4 class="h4">Photoshoot set</h4>
+            <h5 class="h6">$820.20</h5>
+            <div class="review-star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>5</span>
+            </div>
+            <p class="p">Integrate 112 high-quality LED Light Beads with Dimmable Range 1%-100%, You can easily adjust the brightness to get the desired lighting effect. High Color Rendering Index (95+) and no strobe, create brighter and softer lights, help leave your photos looking more natural and great texture.</p>
+          </div>
+        </div>
+      </div>
+      <div class="feature-product-items">
+        <div class="feature-product-box">
+          <div class="feature-product-content">
+            <img src="images/product-img-7.png" alt="" class="product-image">
+            <h4 class="h4">Vlogging Camera</h4>
+            <h5 class="h6">$1800.80</h5>
+            <div class="review-star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>5</span>
+            </div>
+            <p class="p">No experience is necessary to capture great-looking videos. The ZV-1 is designed to capture amazing videos of you and your world, without any tricky setup. The ZV-1 makes all skin colors look vibrant, natural and healthy.</p>
+          </div>
+        </div>
+      </div>
+      <div class="feature-product-items">
+        <div class="feature-product-box">
+          <div class="feature-product-content">
+            <img src="images/product-img-8.png" alt="" class="product-image">
+            <h4 class="h4">Green Screen</h4>
+            <h5 class="h6">$25.48</h5>
+            <div class="review-star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>5</span>
+            </div>
+            <p class="p">Accessories are not less important to main items. Camera accessories such as screen protector, lens protector, bag etc. These small items/accessories let your camera be safe and secure. So, using accessories can add more value to the camera. Pick your best accessories for your product safety.</p>
+          </div>
+        </div>
+      </div>
+      <div class="feature-product-items">
+        <div class="feature-product-box">
+          <div class="feature-product-content">
+            <img src="images/product-img-9.png" alt="" class="product-image">
+            <h4 class="h4">Action Camera</h4>
+            <h5 class="h6">$380.00</h5>
+            <div class="review-star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>5</span>
+            </div>
+            <p class="p">The SJCAM SJ4000 Air has full HD resolution recording at 1920×1080. Wide Dynamic Range (WDR) allows you to Capture warm and vivid Picturesque scenes with the SJ4000. It detects motion to make your movie clips sharp and exciting.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="see-more-button">
+      <a href="#" class="btn rounded">See More<i class="fas fa-arrow-right"></i></a>
     </div>
   </div>
 </section>
