faq section add

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 <!-- start journy sections -->
 <section class="start-journy">
   <div class="container">
-    <div class="d-grid grid-colume-2 justify-items-center align-items-center start-journy-inner">
+    <div class="d-grid grid-colume-2 grid-row-gap grid-colume-gap justify-items-center align-items-center start-journy-inner">
         <div class="start-journy-content">
           <div class="start-journy-info d-flex flex-colume">
             <h2 class="h1">Start your Journey as Influencer</h2>
-            <p class="p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+            <p class="p">Influencer marketing is a hot marketing phenomenon that everyone is talking about. It has become a mainstream marketing tactic and is no longer limited to a select few brands or agencies.</p>
             <div class="button">
               <a href="#" class="btn rounded">Preebook Now<i class="fas fa-arrow-right"></i></a>
             </div>
@@ -98,6 +98,7 @@
     </div>
   </div>
 </section>
+<!-- feature product list section -->
 <section class="feature-product-list">
   <div class="container-big">
     <div class="feature-product-heading">
@@ -271,6 +272,64 @@
       <a href="#" class="btn rounded">See More<i class="fas fa-arrow-right"></i></a>
     </div>
   </div>
+</section>
+<!-- faq sections -->
+<section class="main-faq-section">
+  <div class="faq-heading text-center">
+    <h2 class="h2">Frequently Asked Questions</h2>
+  </div>
+  <div class="main-faq">
+        <div class="main-tab">
+          <input type="checkbox" id="faq-2" class="main-tab-toggle">
+          <label for="faq-2" class="main-tab-label h4">How many followers do you need to be an influencer?</label>
+          <div class="main-tab-content">
+            <p class="p">To be an influencer, in many people’s opinions, you need at least 1,000 followers or subscribers. To join the YPP, influencers need at least 1,000 subscribers with more than 4,000 “valid public watch” hours over the past 12 months. In addition, YouTubers need an AdSense account.</p>
+          </div>
+      </div>
+      <div class="main-tab">
+        <input type="checkbox" id="faq-3" class="main-tab-toggle">
+        <label for="faq-3" class="main-tab-label h4">How do you start off as an influencer?</label>
+        <div class="main-tab-content">
+          <p class="p">7 Steps to Becoming a Social Media Influencer:
+            Select Your Niche.
+            Optimise Your Social Media Profiles.
+            Understand Your Audience.
+            Create and Post Relevant Content.
+            Be Regular and Consistent.
+            Engage With Your Audience.
+            Let Brands Know You're Open to Collaborations.</p>
+        </div>
+    </div>
+    <div class="main-tab">
+      <input type="checkbox" id="faq-4" class="main-tab-toggle">
+      <label for="faq-4" class="main-tab-label h4">Do influencers get paid?</label>
+      <div class="main-tab-content">
+        <p class="p">Yes, influencers get paid. It’s an almost unspoken rule that influencers can get paid $10.00 for every 1,000 followers they have. However, influencers with around 50,000 to 80,000 followers get paid around $200 per post. The price will vary.</p>
+      </div>
+  </div>
+  
+  <div class="main-tab">
+  <input type="checkbox" id="faq-1" class="main-tab-toggle">
+  <label for="faq-1" class="main-tab-label h4">How do I become an influencer and get paid?</label>
+  <div class="main-tab-content">
+    <p class="p">7 Steps to Becoming a Social Media Influencer:
+      Select Your Niche.
+      Optimise Your Social Media Profiles.
+      Understand Your Audience.
+      Create and Post Relevant Content.
+      Be Regular and Consistent.
+      Engage With Your Audience.
+      Let Brands Know You're Open to Collaborations.</p>
+  </div>
+  </div>
+  <div class="main-tab">
+    <input type="checkbox" id="faq-5" class="main-tab-toggle">
+    <label for="faq-5" class="main-tab-label h4">Can anyone be an influencer?</label>
+    <div class="main-tab-content">
+      <p class="p">Nowadays, almost anyone can become an influencer on social media as long as they put in the work. Content creators can specialize in niches, and many micro influencers will often have hundreds to thousands of followers.</p>
+    </div>
+</div>
+</div>
 </section>
 </body>
 </html>
