footer section add

--- a/index.html
+++ b/index.html
@@ -331,5 +331,26 @@
 </div>
 </div>
 </section>
+<!-- footer sections -->
+<footer>
+  <div class="container">
+    <div class="footer-inner">
+      <div class="footer-content">
+        <h2 class="h2">Influencer products</h2>
+        <p class="p">Copyright © 2020  influencer products</p>
+        <p class="p">All rights reserved</p>
+        <div class="social-icon">
+          <ul class="social-inner">
+            <li class="social-items"><a href="#" class="sicial-link"><i class="fab fa-instagram"></i></a></li>
+            <li class="social-items"><a href="#" class="sicial-link"><i class="fab fa-twitter"></i></a></li>
+            <li class="social-items"><a href="#" class="sicial-link"><i class="fab fa-linkedin-in"></i></a></li>
+            <li class="social-items"><a href="#" class="sicial-link"><i class="fab fa-dribbble"></i></a></li>
+            <li class="social-items"><a href="#" class="sicial-link"><i class="fab fa-facebook-f"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
 </body>
 </html>
